# Defies

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  test.html
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  routes.rs
rust_backend_api_gateway/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
rust_backend_api_gateway/migration/: Cargo.toml
rust_backend_api_gateway/migration/src/: lib.rs  m20250806_062648_create_post_table.rs  main.rs
rust_backend_api_gateway/src/: main.rs
rust_backend_api_gateway/src/api/: error.rs  handlers.rs  mod.rs  models.rs  routes.rs
rust_backend_api_gateway/src/application/: mod.rs
rust_backend_api_gateway/src/application/dtos/: ask.rs  chat.rs  liquidity_data.rs  mod.rs  position.rs  price_history.rs
rust_backend_api_gateway/src/application/service/: chat_service.rs  mod.rs  position_service.rs
rust_backend_api_gateway/src/application/use_cases/: forward_prompt_to_backend.rs  get_graph_data.rs  get_kline_data.rs  get_price_history_analysis.rs  handle_auth.rs  mod.rs
rust_backend_api_gateway/src/config/: mod.rs
rust_backend_api_gateway/src/domain/: mod.rs  wallet.rs
rust_backend_api_gateway/src/domain/entities/: chat.rs  mod.rs
rust_backend_api_gateway/src/domain/repositories/: chat_repository.rs  data_provider.rs  dex_provider.rs  jwt.rs  mod.rs  wallet.rs
rust_backend_api_gateway/src/domain/services/: data.rs
rust_backend_api_gateway/src/dtos/: ask.rs  mod.rs
rust_backend_api_gateway/src/infrastructure/: jwt.rs  mod.rs  price_data_client.rs
rust_backend_api_gateway/src/infrastructure/data/: binance_data_provider.rs  dragonswap_data_provider.rs  mod.rs  sailor_data_provider.rs
rust_backend_api_gateway/src/infrastructure/databases/: mod.rs  mongodb_chat_repository.rs
rust_backend_api_gateway/src/infrastructure/external_apis/: binance_data_provider.rs
rust_backend_api_gateway/src/infrastructure/wallet/: cosmos.rs  evm.rs  mod.rs
rust_backend_api_gateway/src/math/: math.rs  mod.rs  price_analysis.rs
rust_backend_api_gateway/src/models/: ask.rs  auth.rs  mod.rs
rust_backend_api_gateway/src/presentation/: handlers.rs  routes.rs
rust_backend_api_gateway/src/service/: auth_service.rs  chat_service.rs  data_for_graphs_service.rs  data_service.rs  kline_service.rs  liquidity_service.rs  mod.rs  pool_service.rs  position_service.rs  price_history_tool_service.rs  prompt_pipeline_service.rs  token_service.rs
(+132 files in other folders)
