[package]
name = "my-actix-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7"
env_logger = "0.11"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }