[package]
name = "rust_backend_api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
k256 = "0.13"
ethers = "2"                                       # for EVM signature recovery
